--- a/Mindbox.Data.Linq.Tests/packages.config
+++ b/Mindbox.Data.Linq.Tests/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.3.1" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient" version="2.1.3" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient.SNI" version="2.1.1" targetFramework="net472" />
+  <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net472" />
   <package id="Microsoft.Identity.Client" version="4.21.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.8.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="6.8.0" targetFramework="net472" />
