--- a/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
+++ b/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
@@ -19,5 +19,9 @@
     <PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
     <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
     <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="Snapshooter.MSTest" Version="0.13.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MultiStatementQuery\__snapshots__\" />
   </ItemGroup>
 </Project>
