--- a/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
+++ b/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
@@ -23,5 +23,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="MultiStatementQuery\__snapshots__\" />
+    <Folder Include="MultiStatementQuery\__snapshots__\__mismatch__\" />
   </ItemGroup>
 </Project>
